# RD

./: .gitignore  Makefile  pyproject.toml
rd_automation/elements/mobile/: home.resource  login.resource  register.resource
rd_automation/elements/web/: admin.resource  login.resource  menu.resource  navbar.resource
rd_automation/helpers/api/cep/: cep.json  get_expected_zipcode.resource
rd_automation/helpers/mobile/: appium.resource
rd_automation/helpers/mobile/register/: create_user.resource
rd_automation/helpers/web/: login.resource  logout.resource  selenium.resource
rd_automation/helpers/web/admin/: create_admin_user.resource  search_admin_user.resource
rd_automation/libraries/: Manage.py  settings.py
rd_automation/resources/: api.resource  mobile.resource  web.resource
rd_automation/steps/api/: cep.resource  template.resource
rd_automation/steps/mobile/: home.resource  login.resource  register.resource
rd_automation/steps/web/: admin.resource
rd_automation/test_cases/api/: cep.robot
rd_automation/test_cases/mobile/: __init__.robot  login.robot
rd_automation/test_cases/web/: __init__.robot  admin.robot
